@@ -1,0 +1,30 @@
+name: windows-latest
+
+on:
+  push:
+    branches:
+      - '*'
+    tags-ignore:
+      - '*'
+  pull_request:
+
+jobs:
+  perl:
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Perl version
+        run: perl -V
+      - name: Perl config
+        run: perl -MConfig -MData::Dumper -e 'local $Data::Dumper::Sortkeys = 1;warn Dumper \%Config;'
+      - name: Download cpanm
+        run: perl -0777 -Mstrict -Mwarnings -MIO::Socket::INET -e 'my $socket = IO::Socket::INET->new(  Proto => qq(tcp),  PeerAddr => qq(cpanmin.us),  PeerPort => 80,) or die $!;print $socket join qq(\r\n),  qq(GET / HTTP/1.1),  qq(Connection:close),  qq(Host:cpanmin.us),  qq(\r\n);my $res = <$socket>;$res =~ s[^HTTP/1\.1 200 OK\r\n.*?\r\n\r\n][]s or die $res;open my $out, qq(>), qq(cpanm) or die $!;print $out $res'
+      - name: cpanm installs ExtUtils::MakeMaker
+        run: perl cpanm -v -n -L ~/mylib ExtUtils::MakeMaker
+      - name: cpanm installs dependent modules
+        run: perl cpanm -v -n --installdeps . --configure-args="--meta"
+      - name: Show MYMETA.json
+        run: cat MYMETA.json
+      - run: perl Makefile.PL
+      - run: gmake
+      - run: gmake disttest
