@@ -1,6 +1,8 @@
 0.05 2023-02-09
   [Fixed Build Process Bug]
     * Fixed a build process bug on Windows.
+  [Test Improvement]
+    * Added Github Action workflows.
 0.04 2022-02-08
   [Prerequirement Changes]
     * SPVM 0.9691+ is needed.
